# occt-beginner

./: .gitignore  README.md
OcctBeginnerMFC/: CMakeLists.txt  OcctBeginnerMFC.sln
OcctBeginnerMFC/OcctBeginner/: CMakeLists.txt  ChildFrm.cpp  ChildFrm.h  ClassView.cpp  ClassView.h  FileView.cpp  FileView.h  MainFrm.cpp  MainFrm.h  OcctBeginner.cpp  OcctBeginner.h  OcctBeginner.rc  OcctBeginner.reg  OcctBeginner.vcxproj  OcctBeginner.vcxproj.filters  OcctBeginnerDoc.cpp  OcctBeginnerDoc.h  OcctBeginnerView.cpp  OcctBeginnerView.h  OutputWnd.cpp  OutputWnd.h  PropertiesWnd.cpp  PropertiesWnd.h  ReadMe.txt  Resource.h  ViewTree.cpp  ViewTree.h  stdafx.cpp  stdafx.h  targetver.h
OcctBeginnerMFC/OcctBeginner/res/: OcctBeginner.rc2  ribbon.mfcribbon-ms
OcctBeginnerX/: CMakeLists.txt
OcctBeginnerX/OcctMath/: CMakeLists.txt  main.cpp  occtMatrix.cpp  occtMatrix.h  occtVector.cpp  occtVector.h  stdafx.h
